--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ const firebaseConfig = {
     apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
     authDomain: "rmpj-7ca13.firebaseapp.com",
     projectId: "rmpj-7ca13",
-    storageBucket: "rmpj-7ca13.appspot.com",
+    storageBucket: "rmpj-7ca13.firebasestorage.app",
     messagingSenderId: "983484366324",
     appId: "1:983484366324:web:5fd58faba825ee39decda1"
 };
