--- a/index.html
+++ b/index.html
@@ -178,7 +178,39 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
+.dateControl {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    border-radius: 6px;
+    background: #222;
+    overflow: hidden;
+}
 
+.dateBtn {
+    width: 28px;
+    height: 40px;
+    border: none;
+    background: #333;
+    color: #FFD700;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.dateBtn:active {
+    background: #444;
+}
+
+.dateControl .r-date {
+    width: 80px;
+    height: 40px;
+    background: transparent;
+    border: none;
+    color: #fff;
+    font-size: 13px;
+    text-align: center;
+}
 
 
 
@@ -243,18 +275,18 @@ input[type="number"] {
         <div id="deadBox" class="folderContent"></div>
 
         <!-- 입력폼 (가로 한줄) -->
-        <div class="recordFormRow">
-            
-            <div class="dateControl">
-    <button type="button" id="datePrev">−</button>
-    <input type="text" id="recordDate" class="r-date" readonly />
-    <button type="button" id="dateNext">+</button>
+       <div class="recordFormRow">
+
+    <div class="dateControl">
+        <button type="button" class="dateBtn" id="datePrev">−</button>
+        <input type="text" id="recordDate" class="r-date" readonly />
+        <button type="button" class="dateBtn" id="dateNext">+</button>
+    </div>
+
+    <input type="number" id="recordWeight" placeholder="무게" />
+    <input type="number" id="recordReps" placeholder="횟수" />
+    <button id="recordAdd">저장</button>
 </div>
-            
-            <input type="number" id="recordWeight" placeholder="무게(kg)" />
-            <input type="number" id="recordReps" placeholder="횟수" />
-            <button id="recordAdd">저장</button>
-        </div>
         <div id="recordMessage" class="fade"></div>
     </div>
 </div>
