--- a/index.html
+++ b/index.html
@@ -137,13 +137,9 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 
 /* 숫자 입력 (무게, 횟수) */
 .recordFormRow input[type="number"] {
-    width: 90px;                   /* 🔥 전부 같은 폭 */
-    height: 40px;                  /* 🔥 전부 같은 높이 */
-    padding: 0 6px;
-    border-radius: 6px;
-    border: none;
-    font-size: 14px;
-    box-sizing: border-box;
+    flex: 1;               /* 🔥 남은 공간 나눠씀 */
+    min-width: 0;          /* 🔥 겹침 방지 핵심 */
+    height: 40px;
 }
 
 /* 저장 버튼 */
@@ -157,7 +153,9 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
     font-weight: 700;
     cursor: pointer;
 }
-
+.recordFormRow button#recordAdd {
+    flex-shrink: 0;
+}
 /* 페이드 메시지 */
 .fade {
     transition: opacity 0.8s ease;
@@ -182,6 +180,8 @@ input[type="number"] {
     display: flex;
     align-items: center;
     height: 40px;
+    width: 136px;          /* 🔥 고정 */
+    flex-shrink: 0;        /* 🔥 절대 줄어들지 않음 */
     border-radius: 6px;
     background: #222;
     overflow: hidden;
