--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 /* 저장 버튼 */
 .recordFormRow button {
     height: 40px;                  /* 🔥 입력칸과 동일 높이 */
-    padding: 0 12px;               /* 가로 여백만 */
+    padding: 20px;               /* 가로 여백만 */
     border-radius: 6px;
     border: none;
     background: #fff;
@@ -153,9 +153,7 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
     font-weight: 700;
     cursor: pointer;
 }
-.recordFormRow button#recordAdd {
-    flex-shrink: 0;
-}
+
 /* 페이드 메시지 */
 .fade {
     transition: opacity 0.8s ease;
