--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 /* 숫자 입력 (무게, 횟수) */
 .recordFormRow input[type="number"] {
     flex: 1;               /* 🔥 남은 공간 나눠씀 */
-    min-width: 0;          /* 🔥 겹침 방지 핵심 */
+    min-width: 80px;          /* 🔥 겹침 방지 핵심 */
     height: 40px;
 }
 
