--- a/index.html
+++ b/index.html
@@ -252,6 +252,27 @@ input[type="number"] {
   grid-template-columns: repeat(7, 1fr); /* 🔥 핵심 */
   gap: 6px;
 }
+
+
+    /* ===== 달력 헤더 (월 이동 버튼 좌/우 정렬) ===== */
+.calendar .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+
+.calendar .header button {
+  width: 36px;
+  height: 36px;
+  padding: 0;
+  border-radius: 50%;
+  background: #111;
+  color: #8b0000; /* 어두운 빨강 */
+  font-size: 18px;
+  font-weight: bold;
+}
+
     
 /* 로그인 area hide on scroll */
 </style>
