--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 /* 저장 버튼 */
 .recordFormRow button {
     height: 40px;                  /* 🔥 입력칸과 동일 높이 */
-    padding: 20px;               /* 가로 여백만 */
+    padding: 0 10px;               /* 가로 여백만 */
     border-radius: 6px;
+     font-size: 14px;
+      white-space: nowrap;
     border: none;
     background: #fff;
     color: #000;
