--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 
 /* 입력폼 한줄 가로배치 (부모) */
 .recordFormRow {
-    display: flex;                 /* 가로 정렬 */
-    gap: 8px;                      /* 요소 사이 간격 */
+    display: grid;                 /* 가로 정렬 */
+   grid-template-columns: 110px 1fr 1fr auto;
+    gap: 6px;                    /* 요소 사이 간격 */
     margin-top: 12px;
     width: 100%;
     max-width: 400px;              /* 전체 줄 최대 폭 */
