--- a/index.html
+++ b/index.html
@@ -277,7 +277,11 @@ input[type="number"] {
   font-size: 18px;
   font-weight: bold;
 }
-
+    
+h2 {
+  font-size: clamp(18px, 5vw, 24px);
+  white-space: nowrap;
+}
     
 /* 로그인 area hide on scroll */
 </style>
