--- a/index.html
+++ b/index.html
@@ -282,7 +282,12 @@ h2 {
   font-size: clamp(18px, 5vw, 24px);
   white-space: nowrap;
 }
-    
+    @media (max-width: 480px) {
+  .tab button {
+    font-size: 14px;
+    padding: 8px 12px;
+  }
+}
 /* 로그인 area hide on scroll */
 </style>
 </head>
