--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 /* 입력폼 한줄 가로배치 (부모) */
 .recordFormRow {
     display: grid;                 /* 가로 정렬 */
-   grid-template-columns: 110px 1fr 1fr auto;
+  grid-template-columns: 118px 1fr 1fr 56px;
     gap: 6px;                    /* 요소 사이 간격 */
     margin-top: 12px;
     width: 100%;
@@ -139,9 +139,14 @@ input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; back
 
 /* 숫자 입력 (무게, 횟수) */
 .recordFormRow input[type="number"] {
-    flex: 2;               /* 🔥 남은 공간 나눠씀 */
-    min-width: 0;          /* 🔥 겹침 방지 핵심 */
+    width: 100%;
     height: 40px;
+    min-width: 0;
+    border-radius: 10px;   /* ← 둥글둥글 */
+    border: none;
+    background: #222;
+    color: #fff;
+    font-size: 15px;
 }
 
 /* 저장 버튼 */
