--- a/index.html
+++ b/index.html
@@ -204,10 +204,32 @@ td, th {
    달력
 ================================ */
 .calendar .header {
-    display:flex;
-    justify-content:space-between;
-    margin-bottom:10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 4px;
+    margin-bottom: 14px;
 }
+   .month-title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #eee;
+    letter-spacing: 0.5px;
+}
+ .month-btn {
+    background: transparent;
+    border: none;
+    color: #8b0000; /* 어두운 빨강 */
+    font-size: 18px;
+    padding: 6px 10px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.month-btn:active {
+    opacity: 1;
+    transform: scale(0.95);
+}  
 .weekdays, .days {
     display:grid;
     grid-template-columns: repeat(7, 1fr);
