--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@ td, th {
 <div id="tab3" class="tabContent">
     <div class="calendar">
         <div class="header">
-            <button id="calPrev">&lt;</button>
-            <div id="calMonth"></div>
-            <button id="calNext">&gt;</button>
-        </div>
+    <button id="calPrev" class="month-btn">&lt;</button>
+    <div id="calMonth" class="month-title"></div>
+    <button id="calNext" class="month-btn">&gt;</button>
+</div>
         <div class="weekdays">
             <div>월</div><div>화</div><div>수</div><div>목</div><div>금</div><div>토</div><div>일</div>
         </div>
