--- a/index.html
+++ b/index.html
@@ -204,10 +204,9 @@ td, th {
    달력
 ================================ */
 .calendar .header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 40px 1fr 40px;
     align-items: center;
-    justify-content: space-between;
-    padding: 8px 4px;
     margin-bottom: 14px;
 }
    .month-title {
